--- a/README
+++ b/README
@@ -13,10 +13,10 @@ Put something like this in your xmonad.hs:
 > myKeys conf @ (XConfig {modMask = modMask}) = M.fromList $
 >     [ ...
 >     , ((modMask .|. shiftMask, xK_f), filePrompt fpConf defaultXPConfig)
->     -- to just use the vanilla KDE file opening mechanism:
->     -- , ((modMask .|. shiftMask, xK_f), filePrompt (FPConf kdeOpen) defaultXPConfig)
 >     , ... ]
 >     where
+>       -- to just use the vanilla KDE file opening mechanism:
+>       -- fpConf = FPConf kdeOpen
 >       fpConf = FPConf $ extendOpen vimForNonBinary kdeOpen   -- Open all non binary files with vim, otherwise let KDE choose
 >         where
 >           vimForNonBinary _ binary =
